--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,54 @@
+:root {
+  --header-height: 150px;
+  --footer-height: 100px;
+}
+
 .debug {
   padding: 1rem;
   border: 2px dashed red;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+header {
+  height: var(--header-height);
+}
+header > div h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+img {
+  height: 100%;
+}
+
+.wrapper {
+  height: calc(100vh - var(--footer-height) - var(--header-height));
+  background-color: #7fffd4;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-container {
+  width: 1000px;
+  height: 1000px;
+  border: 3px solid black;
+  padding: 0rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.cell {
+  width: calc(100% / 10);
+  height: calc(100% / 10);
+  border: 3px solid black;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+footer {
+  height: var(--footer-height);
 }
