--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,9 @@ img {
 
 .wrapper {
   height: calc(100vh - var(--footer-height) - var(--header-height));
-  background-color: #7fffd4;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -32,7 +32,7 @@ img {
 .grid-container {
   width: 1000px;
   height: 1000px;
-  border: 3px solid black;
+  border: 3px solid white;
   padding: 0rem;
   display: flex;
   justify-content: center;
@@ -42,14 +42,15 @@ img {
 
 .cell-100,
 .cell-81,
-.cell-49 {
-  background-color: rgb(179, 224, 241);
+.cell-49,
+.cell-4 {
+  background-color: rgb(194, 206, 206);
   font-size: 1.5rem;
   font-weight: bolder;
   cursor: pointer;
 
   line-height: 100%;
-  border: 3px solid black;
+  border: 1px solid white;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -69,16 +70,58 @@ img {
   height: calc(100% / 7);
 }
 
+.cell-4 {
+  width: calc(100% / 2);
+  height: calc(100% / 2);
+}
+
 footer {
   height: var(--footer-height);
 }
 
 div[class*="cell"].clicked {
-  background-color: rgb(12, 51, 66);
+  background-color: #1e77fe;
   color: white;
 }
 
 div[class*="cell"].bomb {
-  background-color: rgb(189, 21, 21);
+  background-color: rgb(255, 31, 31);
   color: white;
+  animation: shake 0.5s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(5px, 5px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-5px, -5px) rotate(-5deg);
+  }
+  20% {
+    transform: translate(-5px, 00px) rotate(5deg);
+  }
+  30% {
+    transform: translate(5px, 5px) rotate(0deg);
+  }
+  40% {
+    transform: translate(5px, -5px) rotate(5deg);
+  }
+  50% {
+    transform: translate(-5px, 5px) rotate(-5deg);
+  }
+  60% {
+    transform: translate(-5px, 5px) rotate(0deg);
+  }
+  70% {
+    transform: translate(5px, 5px) rotate(-5deg);
+  }
+  80% {
+    transform: translate(-5px, -5px) rotate(5deg);
+  }
+  90% {
+    transform: translate(5px, 5px) rotate(0deg);
+  }
+  100% {
+    transform: translate(5px, -5px) rotate(-5deg);
+  }
 }
